# channelFlow

./: .dockerignore  .firebaserc  .gitignore  AIDEV_NOTES.md  Dockerfile  LICENSE  README.md  TODO.md  app-build-trigger.yaml  app-build-trigger2.yaml  check_permissions.sh  cors-config.json  create_custom_role.sh  env.example  firebase.json  grant_cloud_deployer_roles.sh  grant_cloud_run_sa_roles.sh  inline config yaml before.yaml  package-lock.json  pyproject.toml  release-trigger-after.yaml  release-trigger.yaml  requirements.txt  terraform.tfstate
frontend/: index.html  package-lock.json  package.json  readme  tsconfig.app.json  vite.config.ts
frontend/src/: App.svelte  app.css  env.d.ts  firebase.ts  main.ts
src/: app.py  config.py  database.py  event_base.py  event_bus.py  events.py  security.py  services.py  test_part_import.py  video_processing.py
src/agents/: analysis.py  base_agent.py  callback_context.py  copywriter.py  ingestion.py  invocation_context.py  publisher.py  readonly_context.py  transcription.py  visuals.py
src/artifacts/: base_artifact_service.py  firestore_artifact_service.py
src/auth/: auth_credential.py  auth_schemes.py  auth_tool.py  authentication.py
src/channel.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/events/: event.py  event_actions.py
src/exceptions/: __init__.py
src/lib/: auth.ts
src/models/: llm_response.py
src/routers/: admin.py  auth.py  clips.py  db_upload.py  (+2 more)
terraform/: .terraform.lock.hcl  backend.tf  gcp.tf  main.tf  outputs.tf  secrets.tf  terraform-example.tfvars  variables.tf
(+51 files in other folders)
